--- a/umap/static/umap/map.css
+++ b/umap/static/umap/map.css
@@ -76,7 +76,7 @@ html[dir="rtl"] .leaflet-tooltip-pane>* {
     * Same as leaflet background, to work around screen blincking
     * between DOM is loaded and JS is read to render the map.
     */
-    background-color: var(--color-lightGray);
+    background-color: var(--color-veryLightGray);
 }
 
 .print-portrait,
@@ -270,7 +270,7 @@ html[dir="rtl"] .leaflet-tooltip-pane>* {
     width: 38px;
     height: 38px;
     box-shadow: none;
-    border: 1px solid var(--color-lightGray);
+    border: 1px solid var(--color-veryLightGray);
     border-radius: 4px;
 }
 
@@ -311,11 +311,11 @@ html[dir="rtl"] .leaflet-tooltip-pane>* {
     line-height: 100%;
     border-radius: var(--border-radius);
     margin-bottom: 0;
-    border: 1px solid var(--color-lightGray);
+    border: 1px solid var(--color-veryLightGray);
 }
 
 .leaflet-iconLayers-layerCell-plus:hover {
-    background-color: var(--color-lightGray);
+    background-color: var(--color-veryLightGray);
 }
 
 .leaflet-iconLayers:hover .leaflet-iconLayers-layerCell-plus {
@@ -357,7 +357,7 @@ ul.photon-autocomplete {
     overflow: hidden;
     white-space: nowrap;
     font-size: 1em;
-    border-inline-start: 4px solid var(--color-lightGray);
+    border-inline-start: 4px solid var(--color-veryLightGray);
 }
 
 .photon-autocomplete li strong {
