fix: restore copiable input button height
Broken with "not(icon)" selector added to buttons rules.

Co-authored-by: David Larlet <david@larlet.fr>

--- a/umap/static/umap/css/form.css
+++ b/umap/static/umap/css/form.css
@@ -781,12 +781,13 @@ input[type=hidden].blur+[type="button"] {
     border-radius: initial;
 }
 
-.copiable-input button {
+.copiable-input button[type=button] {
     background-color: var(--background-color);
     color: var(--text-color);
     border: 2px solid var(--color-darkBlue);
     border-left: none;
     width: 40px;
+    height: 40px;
 }
 
 input.highlightable:not(:placeholder-shown) {
