--- a/umap/templates/umap/js.html
+++ b/umap/templates/umap/js.html
@@ -40,4 +40,5 @@
 <script src="{% static 'umap/js/umap.controls.js' %}" defer></script>
 <script type="module" src="{% static 'umap/js/components/fragment.js' %}" defer></script>
 <script type="module" src="{% static 'umap/js/components/modal.js' %}" defer></script>
+<script type="module" src="{% static 'umap/js/components/copiable.js' %}" defer></script>
 {% endautoescape %}
