--- a/umap/static/umap/css/form.css
+++ b/umap/static/umap/css/form.css
@@ -594,8 +594,7 @@ i.info {
 .umap-to-polygon:before,
 .umap-clone:before,
 .umap-edit:before,
-.umap-download:before,
-.umap-to-polyline:before {
+.umap-download:before {
     background-repeat: no-repeat;
     text-indent: 36px;
     height: 24px;
@@ -610,18 +609,13 @@ i.info {
 .dark .umap-to-polygon:before,
 .dark .umap-clone:before,
 .dark .umap-edit:before,
-.dark .umap-download:before,
-.dark .umap-to-polyline:before {
+.dark .umap-download:before {
     background-image: url('../img/24-white.svg');
     vertical-align: middle;
 }
 
 .umap-to-polygon:before {
     background-position: -72px -42px;
-}
-
-.umap-to-polyline:before {
-    background-position: -106px -42px;
 }
 
 .umap-clone:before {
