feat: highlight drawing buttons on click
fix #2778

Co-authored-by: David Larlet <david@larlet.fr>

--- a/umap/static/umap/css/form.css
+++ b/umap/static/umap/css/form.css
@@ -142,6 +142,10 @@ input[type="submit"] {
     font-weight: bold;
 }
 
+[type="button"].on {
+    background-color: var(--color-darkCyan);
+}
+
 .dark .button.primary:not([disabled]),
 .dark [type="button"].primary:not([disabled]) {
     background-color: var(--color-verySoftCyan);
