chore: use URL resolver for "agnocomplete" URL
Do not hardcode, otherwise it will not honour the FORCE_SCRIPT_NAME
setting if set.

Co-authored-by: David Larlet <david@larlet.fr>

--- a/umap/templates/umap/team_form.html
+++ b/umap/templates/umap/team_form.html
@@ -48,7 +48,8 @@
         className: 'edit-team-members',
         on_select: onSelect,
         on_unselect: onUnselect,
-        placeholder: "{% trans "Add user" %}"
+        placeholder: "{% trans "Add user" %}",
+        url: "{% url 'agnocomplete:agnocomplete' 'AutocompleteUser' %}?q={q}"
       }
       const autocomplete = new U.AjaxAutocompleteMultiple(form, options)
       for (const option of select.options) {
