chore: use ESM version of Leaflet.LocateControl
For now, we do not use an importmap (breaks our baseline), so we
hardcoded the path to leaflet module in the plugin…

Let's make this cleaner later, when our baseline is ready for importmaps,
or we are ready to break more old browsers (hello palemoon… :) )

Co-authored-by: David Larlet <david@larlet.fr>

--- a/umap/static/umap/css/icon.css
+++ b/umap/static/umap/css/icon.css
@@ -228,6 +228,14 @@ html[dir="rtl"] .icon {
     background-position: var(--tile) calc(var(--tile) * 4);
 }
 
+.icon-locate {
+    background-position: 0px calc(var(--tile) * 3);
+}
+
+.active .icon-locate {
+    background-position: calc(var(--tile) * 2) calc(var(--tile) * 4);
+}
+
 .icon-magic {
     background-position: calc(var(--tile) * 7) 0;
 }
