wip: make datalayer tree/drag'n'drop more recursive
Co-authored-by: David Larlet <david@larlet.fr>

--- a/umap/static/umap/css/icon.css
+++ b/umap/static/umap/css/icon.css
@@ -136,7 +136,8 @@ html[dir="rtl"] .icon {
     visibility: hidden;
 }
 
-.orderable:hover .icon-drag {
+.orderable.with-toolbox:hover .icon-drag,
+.orderable .with-toolbox:hover .icon-drag {
     visibility: visible;
 }
 
