wip: deal with notree and nochildren
notree: we do not allow at all to have children node
        during drag'n'drop (eg. for rules)
nochildren: we do not allow to make this node child of
            this given node (eg. for a layer which has features)

Co-authored-by: David Larlet <david@larlet.fr>

--- a/umap/static/umap/map.css
+++ b/umap/static/umap/map.css
@@ -1007,13 +1007,16 @@ ul.photon-autocomplete {
 /* ********* */
 
 .orderable.target-above {
-    border-top: 2px solid var(--color-accent);
+    border-top: 2px dashed var(--color-accent);
 }
 .orderable.target-below {
-    border-bottom: 2px solid var(--color-accent);
+    border-bottom: 2px dashed var(--color-accent);
 }
 .orderable.target-middle {
-    border: 2px solid var(--color-accent);
+    border: 2px dashed var(--color-accent);
+}
+.orderable.target-not-allowed {
+    border: 2px dashed var(--color-darkOrange);
 }
 
 /* Dragging visual overlay */
@@ -1042,10 +1045,10 @@ ul.photon-autocomplete {
 }
 
 details details {
-    margin-left: var(--text-margin);
+    margin-left: var(--box-margin);
 }
 .panel.dark .orderable details[open] {
-    border-left: none;
+    border: none;
 }
 .orderable .with-toolbox {
     padding: var(--small-box-padding);
