wip: deactivate tableeditor button for parent layers
Co-authored-by: David Larlet <david@larlet.fr>

--- a/umap/static/umap/css/icon.css
+++ b/umap/static/umap/css/icon.css
@@ -348,6 +348,7 @@ html[dir="rtl"] .icon {
 }
 
 .readonly .icon-table,
+.icon-table.off,
 .off .icon-table {
     background-position: calc(var(--tile) * 3) 0px;
 }
